crates/cistell-core/tests/ui/flatten_with_secret.stderr
error: #[config(flatten)] cannot be combined with secret/default/env_key
  --> tests/ui/flatten_with_secret.rs:10:10
   |
10 | #[derive(Config)]
   |          ^^^^^^
   |
   = note: this error originates in the derive macro `Config` (in Nightly builds, run with -Z macro-backtrace for more info)
